--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "autoprefixer": "^10.4.2",
     "electron-db": "^0.15.7",
     "electron-is-dev": "^1.1.0",
     "electron-next": "^3.1.5",
+    "postcss": "^8.4.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
@@ -25,7 +30,7 @@
     "@types/react-dom": "^16.9.9",
     "electron": "^13",
     "electron-builder": "^22.9.1",
-    "next": "latest",
+    "next": "^12.1.0",
     "rimraf": "^3.0.0",
     "typescript": "^4.0.5"
   },
@@ -36,5 +41,4 @@
       "renderer/out"
     ]
   }
-  
 }
