#5 確認画面の実装 タイムボードの処理を変更 データベース処理をelectron-srcに移動

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "postcss": "^8.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "use-interval": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
